removed update_profile_picture 10:14 AM 27/07/2022

--- a/staffapp/templates/stafflist.html
+++ b/staffapp/templates/stafflist.html
@@ -26,7 +26,7 @@
                         <!-- Profile Picture -->
                         <div class="flex items-center space-x-4">
                             <div class="flex-shrink-0">
-                                <img class="w-14 h-14 rounded-full" src="{{ staff.profile_picture.url }}"
+                                <img class="w-14 h-14 rounded-full" src="{{ staff.staff_image.url }}"
                                     alt="{{ staff.first_name }}'s' image">
                             </div>
         
