--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -15,13 +15,13 @@
     {% include 'snippets/searchbar.html' %}
     
     <!-- Profile Card -->
-    <div class="max-w-3xl mx-auto px-8 mt-8 mb-24 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
+    <div class="max-w-3xl mx-auto px-8 mt-8 mb-10 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
 
         <!-- Container -->
         <div class="flex flex-col items-center py-8">
 
             <!-- Profile Image -->
-                <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{{ staff.update_profile_picture.url }}"
+                <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{{ staff.profile_picture.url }}"
                     alt="{{ staff.first_name }} {{ staff.last_name }} image">
             
             <!-- Name -->
