--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -15,17 +15,17 @@
     {% include 'snippets/searchbar.html' %}
     
     <!-- Profile Card -->
-    <div class="max-w-3xl mx-auto px-8 mt-8 mb-10 bg-white rounded-lg border border-gray-200 shadow-lg dark:bg-gray-800 dark:border-gray-700">   
+    <div class="max-w-3xl mx-auto px-12 mt-8 -mb-4 bg-white rounded-lg border border-gray-200 shadow-lg">   
 
         <!-- Container -->
         <div class="flex flex-col items-center py-8">
 
             <!-- Profile Image -->
-                <img class="mb-4 mt-1 w-32 h-32 rounded-full shadow-sm" src="{{ staff.profile_picture.url }}"
+                <img class="mt-1 w-32 h-32 rounded-full shadow-sm" src="{{ staff.profile_picture.url }}"
                     alt="{{ staff.first_name }} {{ staff.last_name }} image">
             
             <!-- Name -->
-            <h5 class="mb-4 text-3xl text-center mx-auto font-extrabold text-gray-800 dark:text-white">
+            <h5 class="mt-4 text-3xl text-center mx-auto font-extrabold text-gray-800 dark:text-white">
                 {{ staff.first_name.title }}
                 {% if staff.middle_name.title %}
                     {{ staff.middle_name.title }}
@@ -36,7 +36,7 @@
             </h5>
 
             <!-- Cadre -->
-            <div class="flex flex-row items-center justify-center mb-4">
+            <div class="flex flex-row items-center justify-center mt-4">
                 <span class="inline-flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor" stroke-width="2">
@@ -48,7 +48,7 @@
             </div> 
 
             <!-- Department -->
-            <div class="flex flex-row items-center justify-center mb-8 md:mb-4">
+            <div class="flex flex-row items-center justify-center mt-4">
                 <span class="text-center">
                     {% if staff.department %}
                         {% if staff.first_name == 'Abieyuwa' %}
@@ -61,10 +61,12 @@
             </div>
 
             <!-- Horizontal line -->
-		    <hr class="mb-4 md:mb-2 border border-1 border-gray-300 w-full mx-auto dark:border-gray-700 lg:my-8">
+		    <hr class="my-10 md:my-10 lg:my-10 border border-1 border-gray-300 w-full mx-auto dark:border-gray-700">
             
             <!-- Below the hr line/Other fields -->
-            <div class="grid gap-6 mt-4 md:mt-4 mb-8 md:grid-cols-2 lg:grid-cols-3 justify-center">
+
+            <!-- Staff Details -->
+            <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3 items-center px-6">
 
                 <!-- Gender -->
                 <div class="flex flex-row items-center justify-center">
@@ -85,59 +87,39 @@
                             stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M5 10l7-7m0 0l7 7m-7-7v18" />
                         </svg>
-                        {% if staff.level %}
-                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Grade Level {{ staff.level }}</p>
-                            {% else %}
-                                <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
-                        {% endif %}                        
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Grade Level {{ staff.level }}</p>
                     </span>
                 </div>
             
                 <!-- Step -->
-                <div class="flex flex-row align-middle justify-center">
+                <div class="flex flex-row items-center justify-center">
                     <span class="inline-flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
                             stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
                         </svg>
-                        {% if staff.step %}
-                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Step {{ staff.step }}</p>
-                            {% else %}
-                                <span class="-mt-1 text-lg font-bold text-gray-500 dark:text-gray-400"><em>not given</em></span>
-                        {% endif %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">Step {{ staff.step }}</p>
                     </span>
                 </div> 
             
                 <!-- Phone Number -->
                 <div class="flex flex-row items-center justify-center">
-                    <span class="inline-flex">
+                    <span class="inline-flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mt-1 mr-2 text-gray-500 h-6 w-6" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                         </svg>
-                        {% if staff.phone_number %}
-                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.phone_number.as_national }}</p>
-                            {% else %}
-                                <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>{{ phone_number_default }}</em></span>
-                        {% endif %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.phone_number.as_national }}</p>
                     </span>
-                </div>
+                </div>                     
             
-                <!-- Email -->
-                <div class="flex flex-row items-center justify-center">
+                <!-- First Appointment -->
+                <div class="flex flex-row justify-center">
                     <span class="inline-flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 mt-1 text-gray-500 h-6 w-6" fill="none"
-                            viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-                        </svg>
-                        {% if staff.email %}
-                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.email }}</p>
-                            {% else %}
-                                <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>email not given</em></span>
-                        {% endif %}
+                        <img class="-ml-1 mt-1 font-extrabold mr-2 text-gray-500 h-9 w-9" src="{% static 'img/handshake.svg' %}">
+                        <p class="text-justify text-lg font-bold text-gray-500">{{ staff.first_appointment }}</p>
                     </span>
                 </div>
             
@@ -149,24 +131,20 @@
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
                         </svg>
-                        {% if staff.birth_day %}
-                            <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month_verbose }} {{ staff.birth_day }}</p>
-                            {% else %}
-                                <span class="text-lg font-bold text-gray-500 dark:text-gray-400"><em>birthday</em></span>
-                        {% endif %}
+                        <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.birth_month_verbose }} {{ staff.birth_day }}</p>
                     </span>
                 </div>
-            </div>                      
+            </div> 
             
-            <!-- First Appointment -->
-            <div class="flex flex-row items-center justify-center -mt-2 md:mt-0">
+            <!-- Email -->
+            <div class="mt-6 flex flex-row items-center justify-center">
                 <span class="inline-flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 mt-[0.5] text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor" stroke-width="2">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 mt-1 text-gray-500 h-6 w-6" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+                            d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
-                        <p class="items-center text-lg font-bold text-gray-500">Employed on {{ staff.first_appointment }}</p>
+                    <p class="text-lg font-bold text-gray-500 dark:text-gray-400">{{ staff.email }}</p>
                 </span>
             </div>
             
