--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		
 		<link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- jQuery Datepicker -->		
 		<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
