--- a/staffapp/templates/snippets/searchbar.html
+++ b/staffapp/templates/snippets/searchbar.html
@@ -1,37 +1,4 @@
 
-<!-- Search Autocomplete -->
-<script>
-    $(function () {
-        var availableTags = [
-            "ActionScript",
-            "AppleScript",
-            "Asp",
-            "BASIC",
-            "C",
-            "C++",
-            "Clojure",
-            "COBOL",
-            "ColdFusion",
-            "Erlang",
-            "Fortran",
-            "Groovy",
-            "Haskell",
-            "Java",
-            "JavaScript",
-            "Lisp",
-            "Perl",
-            "PHP",
-            "Python",
-            "Ruby",
-            "Scala",
-            "Scheme"
-        ];
-        $("#tags").sendmail.apps.SendmailConfig({
-            source: availableTags
-        });
-    });
-</script>
-
 <!-- Search bar -->
 <div class="max-w-3xl rounded-lg mx-auto mt-8 mb-4">
 
@@ -46,7 +13,7 @@
                             focus:ring-4 focus:outline-none focus:ring-blue-600
                             dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 
                             dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    placeholder="Search for a staff..." required>            
+                    placeholder="Search for a Staff..." required>            
         </div>
         
 
