--- a/staffapp/templates/stafflist.html
+++ b/staffapp/templates/stafflist.html
@@ -12,7 +12,7 @@
     
     
     <!-- Staff list -->
-    <div class="p-6 md:pb-4 mt-8 max-w-3xl mb-10 md:mb-8 bg-white rounded-lg border mx-auto shadow-md sm:p-10 min-h-full justify-center">
+    <div class="p-8 md:pb-4 mt-8 max-w-3xl -mb-6 bg-white rounded-lg border mx-auto shadow-md sm:p-8 min-h-full justify-center">
         
         {% comment %} STAFF LIST HEADING {% endcomment %}
         <div class="flex justify-between items-center mb-4">
