--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
 	</head>
 
 	<!-- Body -->
-	<body class="bg-gray-200 font-sans p-4">
+	<body class="bg-gray-200 font-sans p-6">
         
 		<!-- Navbar -->
 		<nav class="bg-white rounded-md shadow-lg px-2 sm:px-4 py-3 md:py-3 dark:bg-gray-800">
@@ -196,7 +196,7 @@
 	<!-- End Body -->
 	
 	<!-- Footer -->	
-	<footer class="px-4 mt-20 bg-none pb-4 bottom-0 md:bottom-0 md:px-6 dark:bg-gray-800">		
+	<footer class="mt-20 bg-none pb-4 bottom-0 md:bottom-0 lg:bottom-0 dark:bg-gray-800">		
 
 		<!-- Horizontal line -->
 		<hr class="my-6 border border-1 border-gray-300 sm:mx-auto dark:border-gray-700 lg:my-8">
