--- a/staffapp/templates/updatestaff.html
+++ b/staffapp/templates/updatestaff.html
@@ -14,10 +14,10 @@
     {% include 'snippets/searchbar.html' %}  
 
     <!-- Outer Container -->
-    <div class="max-w-3xl min-h-full flex items-center justify-center mx-auto py-8 px-6 md:px-0 lg:px-0">
+    <div class="max-w-3xl min-h-full flex items-center justify-center mx-auto py-8 ">
     
         <!-- Inner Container -->
-        <div class="w-full bg-white -mt-4 -mb-8 lg:-mb-10 shadow-md rounded-lg px-10 py-8">
+        <div class="w-full bg-white -mt-6 -mb-10 shadow-md rounded-lg px-10 py-8">
 
             <!-- Form -->
             <form action="" method="POST" enctype="multipart/form-data">
